2002-11-09  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: --enable-mmx	(default: off)
	* configure.in: --enable-3dnow (default: off)
	* vec.h: Explanatory comment.

2002-11-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: For theft, see if NPC is facing Avatar.
	* objs/objs.cc: get_dir_facing().

2002-11-08  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Implement sound-effect eggs.
	* mapedit/eggeddit.cc:  SFX eggs.

2002-11-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/execbox.*: don't compile this for win32

2002-11-04  Max Horn  <max@quendi.de>
	* conf/Configuration.*, conf/XMLEntity.*: some cleanup (in function args,
	  using 'const string &' instead of just 'string' or 'const string' is more
	  efficient as the string doesn't have to be cloned temporarily)
	* menulist.cc: do not swallow certain command combos (Cmd-Q, Alt-X, ...) when
	  nothing is selected
	* game.cc, file/utils.*: Added and make use of clone_system_path()

2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed division by zero
	* shapes/Makefile.am: removed outdated OMIT_DEPENDENCIES
	* mapedit/compile.cc: std::string
	* mapedit/execbox.cc: #include <iostream>

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/shapelst.cc,chunklst.cc,paledit.cc,combo.cc: mouse wheel

2002-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc,mapedit/chunklst.cc,etc: "Paint with chunks" mode added.

	* mapedit/shapelst.cc,etc:  Keep shape browsers around so that
	they're at the same spot and selection when you return to them.

2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/exult_studio.glade: East is a direction too :-)
	* objs/egg.cc: use shape 200, frame 1-5 for new missile eggs