@@ -1,3 +1,9 @@
+2002-11-21  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gumps/Spellbook_gump.cc (Spellbook_gump): Use correct font so
+	that the circles and spell-counts get palette animation.
+	(Spellbook_gump): Show turning page (what a pain!)
+
 2002-11-09  Dancer Vesperman <dancer@users.sourceforge.net>
 	* configure.in: --enable-mmx	(default: off)
 	* configure.in: --enable-3dnow (default: off)
